[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/rcLaser.gd" type="Script" id=1]
[ext_resource path="res://resources/textures/laserTexture.png" type="Texture" id=2]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.260726, 0.79538, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.898039, 0.231373, 0.266667, 1, 0.619608, 0.156863, 0.207843, 1, 0.619608, 0.156863, 0.207843, 0 )

[node name="rcLaser" type="RayCast2D"]
enabled = true
cast_to = Vector2( 1280, 0 )
script = ExtResource( 1 )

[node name="line2D" type="Line2D" parent="."]
points = PoolVector2Array( 1, 0, 40, 0 )
width = 8.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 2 )
texture_mode = 1

[node name="cPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 32
lifetime = 0.33
speed_scale = 2.0
emission_shape = 1
emission_sphere_radius = 4.0
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 64.0
initial_velocity_random = 0.33
angle = 360.0
angle_random = 1.0
scale_amount = 2.0
scale_amount_random = 1.0
color_ramp = SubResource( 2 )

[node name="hitParticles" type="CPUParticles2D" parent="."]
position = Vector2( 21, -24 )
rotation = -3.14159
emitting = false
amount = 64
lifetime = 0.5
speed_scale = 2.0
local_coords = false
draw_order = 1
emission_shape = 1
emission_sphere_radius = 2.0
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 64.0
initial_velocity_random = 0.33
angle = 360.0
angle_random = 1.0
scale_amount = 2.0
scale_amount_random = 1.0
color_ramp = SubResource( 2 )
